@@ -1,4 +1,3 @@
-/*
 package com.project.eatTogether.application.service;
 
 import com.project.eatTogether.application.dto.RsAmenitiesDTO;
@@ -22,18 +21,33 @@ public class AmenitiesService {
         List<Long> amenitiesIds = amenitiesMappingRepository.findByRsRestaurantRsId(restaurantId)
                 .stream()
                 .map(mapping -> mapping.getRsAmenities().getRsAmenityId())
-                .collect(Collectors.toList());
+                .toList();
 
         return amenitiesIds.stream()
                 .map(id -> {
                     RsAmenities amenity = amenitiesRepository.findById(id)
                             .orElseThrow(() -> new RuntimeException("Amenity not found"));
+
+                    // RsRestaurant에서 rsPark와 rsTime 정보를 가져오기
+                    String rsPark = amenitiesMappingRepository.findByRsRestaurantRsId(restaurantId).stream()
+                            .filter(mapping -> mapping.getRsAmenities().getRsAmenityId().equals(id))
+                            .map(mapping -> mapping.getRsRestaurant().getRsPark())
+                            .findFirst()
+                            .orElse(null);
+
+                    String rsTime = amenitiesMappingRepository.findByRsRestaurantRsId(restaurantId).stream()
+                            .filter(mapping -> mapping.getRsAmenities().getRsAmenityId().equals(id))
+                            .map(mapping -> mapping.getRsRestaurant().getRsTime())
+                            .findFirst()
+                            .orElse(null);
+
                     return RsAmenitiesDTO.builder()
                             .rsAmenityId(amenity.getRsAmenityId())
                             .rsAmenityName(amenity.getRsAmenityName())
+                            .rsPark(rsPark)
+                            .rsTime(rsTime)
                             .build();
                 })
                 .collect(Collectors.toList());
     }
 }
-*/
